<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.gmail.jannyboy11</groupId>
  <artifactId>CustomRecipes</artifactId>
  <packaging>jar</packaging>
  <version>3.0.0-alpha-SNAPSHOT</version>
  <name>CustomRecipes</name>
  <description>In-game crafting and furnace recipe management for your Spigot server!</description>

  <build>

    <defaultGoal>clean install</defaultGoal>

    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>

    <plugins>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <release>9</release>
          <!-- IntelliJ IDEA you are drunk, <source> and <target> ar unnecessary when <release is present> -->
          <source>9</source>
          <target>9</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.1.0</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <relocations>
                <relocation>
                  <pattern>org.objectweb.asm</pattern>
                  <shadedPattern>com.gmail.jannyboy11.customrecipes.asm</shadedPattern>
                </relocation>
              </relocations>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.0.0-M1</version>
        <configuration>
          <show>protected</show>
          <nohelp>true</nohelp>
          <excludePackageNames>
            <!-- TODO I should split the project up in maven modules -->
            com.gmail.jannyboy11.customrecipes.commands:
            com.gmail.jannyboy11.customrecipes.gui:
            com.gmail.jannyboy11.customrecipes.impl:
            com.gmail.jannyboy11.customrecipes.serialize:
            com.gmail.jannyboy11.customrecipes.util
          </excludePackageNames>
          <failOnError>false</failOnError>
          <links>
            <link>https://hub.spigotmc.org/javadocs/spigot/</link>
            <link>http://docs.oracle.com/javase/9/docs/api</link>
          </links>
        </configuration>
      </plugin>

    </plugins>

  </build>

  <dependencies>
    <dependency>
      <groupId>org.ow2.asm</groupId>
      <artifactId>asm</artifactId>
      <version>5.2</version> <!-- TODO upgrade to 6.0 for Java 9 -->
    </dependency>

    <dependency>
      <groupId>org.spigotmc</groupId>
      <artifactId>spigot</artifactId>
      <version>1.12.2-R0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>

</project>